fixes for watch and nbt edit gui